force-app/main/default/objects/Contact_Email_Message__c/Contact_Email_Message__c.object-meta.xml
<CustomObject>
    <description>Contact email messages</description>
    <label>Contact Email</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>