force-app/main/default/objects/Contact_Email_Message__c/fields/Master_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Id__c</fullName>
    <description>Contact parent id</description>
    <label>Parent Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Emails</relationshipLabel>
    <relationshipName>Contact_Emails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>